[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Code/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/Code/MimicDoor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Code/Book.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/Code/Potion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Code/Key.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/TitleScreen/Code/Fade.tscn" type="PackedScene" id=6]
[ext_resource path="res://Stages/Code/StageOne.gd" type="Script" id=7]
[ext_resource path="res://GlobalAssets/AnimatedBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://Items/Code/Comb.tscn" type="PackedScene" id=9]
[ext_resource path="res://Items/Code/Chest.tscn" type="PackedScene" id=10]
[ext_resource path="res://Items/Code/Feather.tscn" type="PackedScene" id=12]
[ext_resource path="res://Items/Code/Cheese.tscn" type="PackedScene" id=13]
[ext_resource path="res://Items/Code/RatHole.tscn" type="PackedScene" id=14]
[ext_resource path="res://TileSet/Code/pixelTileTest.tscn" type="PackedScene" id=15]

[node name="StageOne" type="Node"]
script = ExtResource( 7 )

[node name="backdrop" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -9289.85
margin_top = -7116.66
margin_right = 25557.2
margin_bottom = 20482.4
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pixelTileTest" parent="." instance=ExtResource( 15 )]

[node name="YSort" type="YSort" parent="."]
position = Vector2( 30.256, -7.4397 )

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 474.568, 318.15 )

[node name="DogComb" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 799.907, -580.017 )
rotation = -1.53638

[node name="Potion2" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 2488.27, -942.133 )
rotation = -0.0817888

[node name="Cheese" parent="YSort" instance=ExtResource( 13 )]
position = Vector2( 259.582, 71.5497 )
rotation = -2.13946

[node name="Potion3" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 351.996, 227.657 )
rotation = -1.37127

[node name="Potion4" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 364.605, 899.6 )
rotation = -0.817545

[node name="Key" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 1651.89, -445.408 )

[node name="DogComb2" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 579.154, -72.5722 )

[node name="Feather2" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 1617.02, -722.721 )

[node name="Book" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 797.805, -190.904 )

[node name="Feather" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( -56.2105, 114.471 )

[node name="MimicDoor" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 703.538, 98.4491 )

[node name="MimicDoor2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 446.361, 679.634 )
hasSecret = true

[node name="Chest" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( -67.653, -2362.31 )

[node name="RatHole" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( 1285.2, -1092.66 )

[node name="RatHole2" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( -776.478, -1988.92 )

[node name="RatHole3" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( 3072.11, -1216.43 )

[node name="RatHole4" parent="YSort" instance=ExtResource( 14 )]
position = Vector2( 5376.03, 1655.09 )

[node name="Fade" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AnimatedBackground" parent="." instance=ExtResource( 8 )]
pause_mode = 2
visible = false
position = Vector2( 508.055, 302.414 )
scale = Vector2( 1.98578, 1.05636 )

[node name="notificationPosition" type="Position2D" parent="."]
position = Vector2( 275.663, 400.314 )

[connection signal="ratHoleEntered" from="YSort/RatHole" to="." method="_on_RatHole_ratHoleEntered"]
[connection signal="ratHoleEntered" from="YSort/RatHole2" to="." method="_on_RatHole2_ratHoleEntered"]
[connection signal="ratHoleEntered" from="YSort/RatHole3" to="." method="_on_RatHole3_ratHoleEntered"]
[connection signal="ratHoleEntered" from="YSort/RatHole4" to="." method="_on_RatHole4_ratHoleEntered"]
[connection signal="fadeFinished" from="Fade" to="." method="_on_Fade_fadeFinished"]
